# directory-scan

./: .editorconfig  .gitignore  CHECKLIST.md  LICENSE  README.md  pyproject.toml  setup.cfg  task.md
directory_scan/: app.py  version.py
directory_scan/dsaiologger/: __init__.py  handlers.py  json.py  logger.py  stdstreams.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_templates/: github.html  moreinfo.html
tests/: conftest.py
tests/dsaiologger/: test_dsaiologger.py  test_handlers.py  test_json.py  test_stdstreams.py
tests/fixtures/: config.yml
