[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "directory-scan"
version = "0.1.1"
description = "Scan directory. Find changes."

license = "MIT"

authors = ["i.g.chernyakov <i.g.chernyakov@yandex.ru>"]

readme = "README.md"

repository = "https://github.com/i.g.chernyakov/directory-scan"
homepage = "https://github.com/i.g.chernyakov/directory-scan"

keywords = [
  "directory",
  "scanner",
  "asyncio"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
]


[tool.poetry.dependencies]
python = "^3.7"
attrs = "^18.2"
click = "^7.0"
anyconfig = "^0.9.8"
aiologger = "^0.3.0"
"ruamel.yaml" = { version = "^0.15.87", optional = true}
toml = { version = "^0.10.0", optional = true}
configobj = { version = "^5.0", optional = true}
pywin32 = { version = "^223.0", optional = true, markers = 'platform_system == "Windows"'}
psycopg2-binary = { version = "^2.7", optional = true }
mysqlclient = { version = "^1.3", optional = true }
sqlalchemy = "^1.2"


[tool.poetry.extras]
pgsql = ["psycopg2-binary"]
mysql = ["mysqlclient"]
pywin32 = ["pywin32"]
yaml = ["ruamel.yaml"]
toml = ["toml"]
configobj = ["configobj"]


[tool.poetry.dev-dependencies]
pytest = "^4.0"
flake8-pytest = "^1.3"
pytest-flake8 = "^1.0"
pytest-isort = "^0.2"
pytest-cov = "^2.6"
pytest-randomly = "^1.2"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^0.9"
pytest-timeout = "^1.3"
pytest-asyncio = "^0.10.0"
pre-commit = "^1.12"
mypy = "^0.641"
sphinx = "^1.8"
sphinx-autodoc-typehints = "^1.5"
doc8 = "^0.8"
safety = "^1.8"
isort = "^4.3"
flake8 = "^3.7"
coverage = "^4.5"
tomlkit = "^0.5.3"
sphinxcontrib-mermaid = "^0.3.1"
m2r = "^0.2.1"
added-value = "^0.14.1"
recommonmark = "^0.5.0"
typing-extensions = "^3.7"
