[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
  dirscan = directory_scan.app:cli

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
omit = 
  tests/*.py
  temp/*.py

[flake8]
max-complexity = 6
statistics = False
max-line-length = 80
doctests = True
count = False
inline-quotes = single
accept-encodings = utf-8

[tool:pytest]
# Timeout for tests, so they can not take longer
# than this amout of seconds.
# You should adjust this value to be as low as possible:
timeout = 5

flake8-ignore =
  tests/*.py D101 D102 D103 D107
	*.py *.py D100 D104 D106 D401

# Directories that are not visited by pytest collector:
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__

# You will need to measure your tests speed with `-n auto` and without it,
# so you can see whether it gives you any performance gain, or just gives
# you an overhead. See `docs/template/development-process.rst`.
addopts =
	--strict
	--doctest-modules
	--flake8
	--isort
  --ignore=temp
;  # -n auto
;  # --boxed
  --cov=directory_scan
	--cov-report=term:skip-covered
	--cov-report=html
;	--cov-fail-under=100


[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY


[mypy]
# The mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
python_version = 3.7

check_untyped_defs = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True


[doc8]
ignore-path = docs/_build
max-line-length = 80
sphinx = True

[easy_install]

